--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 clap = { version = "4", features = ["derive"] } 
 tracing = "0.1"
 tracing-appender = "0.2"
-tracing-subscriber = {version = "0.3", features = ["time"]}
-time = {version = "0.3", features = ["formatting", "macros", "local-offset"]}
+tracing-subscriber = { version = "0.3", features = ["time", "registry"] }
+time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
 dotenvy = "0.15"
 dotenvy_macro = "0.15"
 russh = "0.49"
 russh-sftp = "2.0"
-tokio = {version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"]}
-anyhow = "1.0.94"
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
+anyhow = { version = "1.0.94", features = ["backtrace"] }
 async-trait = "0.1.83"
 md5 = "0.7.0"
