--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ tracing-subscriber = { version = "0.3", features = ["time", "registry"] }
 time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
 dotenvy = "0.15"
 dotenvy_macro = "0.15"
-russh = "0.49"
+russh =  "^0.53"
 russh-sftp = "2.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
 anyhow = { version = "1.0.94", features = ["backtrace"] }
-async-trait = "0.1.83"
-md5 = "0.7.0"
+md5 = "0.8.0"
+windows-services = "0.24"
+runas = "1.2.0"
