--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ dotenvy = "0.15"
 dotenvy_macro = "0.15"
 russh =  "^0.53"
 russh-sftp = "2.0"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "signal"] }
 anyhow = { version = "1.0.94", features = ["backtrace"] }
 md5 = "0.8.0"
 windows-services = "0.24"
