--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ russh-sftp = "2.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "signal"] }
 anyhow = { version = "1.0.94", features = ["backtrace"] }
 md5 = "0.8.0"
-windows-services = "0.26"
-runas = "1.2.0"
+windows-service = "0.8"
+windows-sys = { version = "0.61", features = [ "Win32_Foundation" ] }
