--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "extract-downloader"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
 
 [dependencies]
 anyhow = { version = "1.0.94", features = ["backtrace"] }
 clap = { version = "4", features = ["derive"] }
 md5 = "0.8.0"
-russh = "0.55" #"=0.54.5"
+russh = "0.55"
 russh-sftp = "2.0"
 serde = { version = "1", features = ["derive"] }
 time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
