--- a/.gitea/workflows/build_release.yaml
+++ b/.gitea/workflows/build_release.yaml
@@ -18,6 +18,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             mingw-w64 \
+            cmake \
+            ninja-build \
             zip \
             jq
 
@@ -28,6 +30,13 @@ jobs:
           targets: x86_64-pc-windows-gnu
 
       - name: Build (release, windows x86_64 GNU)
+        env:
+          # Tell aws-lc-sys we are cross-compiling
+          AWS_LC_SYS_CROSS_COMPILE: "1"
+          # Explicit MinGW toolchain
+          CC_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc
+          CXX_x86_64_pc_windows_gnu: x86_64-w64-mingw32-g++
+
         run: cargo build --release --target x86_64-pc-windows-gnu
 
       - name: Package artifact
