--- a/.gitea/workflows/build_release.yaml
+++ b/.gitea/workflows/build_release.yaml
@@ -29,15 +29,35 @@ jobs:
         with:
           targets: x86_64-pc-windows-gnu
 
+      # Optional but recommended (aws-lc-sys builds are heavy)
+      - name: Cache cargo
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Build (release, windows x86_64 GNU)
         env:
-          # Tell aws-lc-sys we are cross-compiling
+          # Tell aws-lc-sys we're cross-compiling
           AWS_LC_SYS_CROSS_COMPILE: "1"
-          # Explicit MinGW toolchain
+
+          # Explicit MinGW toolchain for the Windows GNU target
           CC_x86_64_pc_windows_gnu: x86_64-w64-mingw32-gcc
           CXX_x86_64_pc_windows_gnu: x86_64-w64-mingw32-g++
+          AR_x86_64_pc_windows_gnu: x86_64-w64-mingw32-ar
+          RANLIB_x86_64_pc_windows_gnu: x86_64-w64-mingw32-ranlib
 
-        run: cargo build --release --target x86_64-pc-windows-gnu
+          # Help CMake avoid host contamination
+          CMAKE_SYSTEM_NAME: Windows
+          CMAKE_C_COMPILER: x86_64-w64-mingw32-gcc
+          CMAKE_CXX_COMPILER: x86_64-w64-mingw32-g++
+          CMAKE_AR: x86_64-w64-mingw32-ar
+          PKG_CONFIG_ALLOW_CROSS: "1"
+        run: |
+          cargo build --release --target x86_64-pc-windows-gnu
 
       - name: Package artifact
         shell: bash
