--- a/.gitea/workflows/build_release.yaml
+++ b/.gitea/workflows/build_release.yaml
@@ -86,7 +86,7 @@ jobs:
           echo "Packaged: $ARCHIVE"
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: https://github.com/christopherHX/gitea-upload-artifact@v4
         with:
           name: windows-x86_64
           path: dist/*.zip
